# MarvelRivals-backend

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
backend/: settings.py  urls.py
backend/api/: admin.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_rename_nome_hero_name.py
backend/backend/: settings.py  urls.py
heroes/: admin.py  apps.py  factories.py  signals.py  urls.py
heroes/migrations/: 0001_initial.py  0002_alter_heroes_id.py  0003_alter_heroes_id.py  0004_alter_heroes_id.py  0005_alter_heroes_id.py  0006_alter_heroes_id.py
heroes/models/: __init__.py  heroes.py
heroes/serializers/: __init__.py  heroes_serializer.py
heroes/viewsets/: __init__.py  heroes_viewset.py
